recycler view, note model implemented

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,17 @@
 <resources>
     <string name="app_name">kotlin note app</string>
+    <string name="search_hint">Search here…</string>
+
+    <string name="filter_icon_des">to filter note list</string>
+    <string name="fab_add">to add notes</string>
+    <string name="back_btn">to move back to previous page</string>
+    <string name="more_btn">to show more options</string>
+    <string name="note_list_page_title">My Notes</string>
+
+    <string name="note_text_model_title">Note Title</string>
+    <string name="note_text_model_date">Jan 20th 2020 03:04 PM</string>
+    <string name="note_text_model_note">Lorem Ipsum has been the industry\'s standard text ever
+since the 1500s, when an unknown printer of type
+and scrambled it to also make a type specimen. It has a
+survived not only five centuries, but also in the leap into…</string>
 </resources>
